--- a/04_object/06_eneumerable.html
+++ b/04_object/06_eneumerable.html
@@ -16,7 +16,7 @@
           console.log(child);
           console.log("toString" in child);
           console.log(child.hasOwnProperty("education"));
-          console.log(child.propertyIsEnumerable("education"));
+          console.log(child.propertyIsEnumerable("education"));//for ownProperty not aprent
           console.log(child.propertyIsEnumerable("toString"));
      </script>
 </html>
