--- a/07_functionalProgramming/17_ramdaMethod.html
+++ b/07_functionalProgramming/17_ramdaMethod.html
@@ -1,9 +1,46 @@
 <html>
-     <script src="https://cdn.jsdelivr.net/npm/ramda@0.27.1/dist/ramda.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.29.0/ramda.min.js"></script>
      <script>
           let result =R.ap([R.multiply(2), R.add(3)], [1,2,3]);
           console.log(result);
           let result1 = R.ap([R.concat('tasty '), R.toUpper], ['pizza', 'salad']);;
           console.log(result1);
+
+
+          //   converge is fork
+          const average = R.converge(R.divide, [R.sum, R.length])
+          console.log(average([1, 2, 3, 4, 5, 6, 7]));
+
+          //count
+          const even = x => x % 2 == 0;
+          let result2 = R.count(even, [1, 2, 3, 4, 5]); 
+          console.log(result2);
+
+          //comparator
+          const byAge = R.comparator((a, b) => a.age < b.age);
+          const people = [
+          { name: 'Emma', age: 70 },
+          { name: 'Peter', age: 78 },
+          { name: 'Mikhail', age: 62 },
+          ];
+          const peopleByIncreasingAge = R.sort(byAge, people);
+          console.log(peopleByIncreasingAge);
+
+          //always
+          console.log(R.always('Tee')());
+
+          //equals
+          console.log(R.equals(1, 1));
+
+          //cond
+          const fn = R.cond([
+               [R.equals(0),   R.always('water freezes at 0°C')],
+               [R.equals(100), R.always('water boils at 100°C')],
+               [R.T,           temp => 'nothing special happens at ' + temp + '°C']
+          ]);
+          console.log(fn(0));
+          console.log(fn(50));
+          console.log(fn(100));
+
      </script>
 </html>
