--- a/01_typeValueVariable/01_number.html
+++ b/01_typeValueVariable/01_number.html
@@ -3,6 +3,7 @@
           // Integer Literal 
           console.log(2);
           console.log(0xff);
+          console.log(0b1010);
           //Floating Point Literal
           console.log(2.34);
           console.log(2e10);
