--- a/07_functionalProgramming/CaetegoryTheory/14_whyMonad.html
+++ b/07_functionalProgramming/CaetegoryTheory/14_whyMonad.html
@@ -1,5 +1,6 @@
 <html>
      <script>
+            //functor with flatMap is monad
     const Container = (value)=>({
             val(){
                 return value;
