--- a/09_standardLibrary/01_set.html
+++ b/09_standardLibrary/01_set.html
@@ -9,6 +9,7 @@
      console.log(set.add([10, 30]));
      console.log(set.delete(10));
      console.log(set);
+     console.log(set.add(100).add(50).add(79));
      
     for (let item of set) {
      console.log(item);
